--- a/app/src/main/res/layout-land/activity_main.xml
+++ b/app/src/main/res/layout-land/activity_main.xml
@@ -7,240 +7,253 @@
     tools:context="com.example.eleves.calculator.MainActivity">
 
     <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="489dp"
-        android:layout_marginBottom="8dp"
-        android:layout_marginTop="8dp"
-        android:orientation="vertical"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="4dp"
+        android:orientation="horizontal"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
-        <TextView
-            android:id="@+id/textView"
-            android:layout_width="match_parent"
-            android:layout_height="104dp"
-            android:background="@drawable/visor_lcd"
-            android:text="TextView"
-            tools:layout_margin="5dp" />
-
         <LinearLayout
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:orientation="horizontal">
-
-            <Button
-                android:layout_width="65dp"
-                android:layout_height="65dp"
-                android:layout_margin="5dp"
-                android:layout_weight="1"
-                android:background="@drawable/button_ac"
-                android:text="AC" />
+            android:layout_weight="1"
+            android:orientation="vertical">
 
             <LinearLayout
-                android:layout_width="80dp"
-                android:layout_height="match_parent"
+                android:layout_width="wrap_content"
+                android:layout_height="65dp"
                 android:layout_weight="1"
                 android:orientation="horizontal">
 
                 <Button
-                    android:layout_width="42dp"
-                    android:layout_height="65dp"
-                    android:layout_margin="5dp"
+                    android:id="@+id/button_7"
+                    android:layout_width="75dp"
+                    android:layout_height="60dp"
+                    android:layout_margin="3dp"
                     android:layout_weight="1"
-                    android:background="@drawable/parentese"
-                    android:text="(" />
+                    android:background="@drawable/numbers"
+                    android:text="7" />
 
                 <Button
-                    android:layout_width="42dp"
-                    android:layout_height="65dp"
-                    android:layout_margin="5dp"
+                    android:id="@+id/button_8"
+                    android:layout_width="75dp"
+                    android:layout_height="60dp"
+                    android:layout_margin="3dp"
                     android:layout_weight="1"
-                    android:background="@drawable/parentese"
-                    android:text=")" />
+                    android:background="@drawable/numbers"
+                    android:text="8" />
+
+                <Button
+                    android:id="@+id/button_9"
+                    android:layout_width="75dp"
+                    android:layout_height="60dp"
+                    android:layout_margin="3dp"
+                    android:layout_weight="1"
+                    android:background="@drawable/numbers"
+                    android:text="9" />
+
+                <Button
+                    android:id="@+id/button_oper_fois"
+                    android:layout_width="75dp"
+                    android:layout_height="60dp"
+                    android:layout_margin="3dp"
+                    android:layout_weight="1"
+                    android:background="@drawable/button_operation"
+                    android:text="*" />
+
+                <Button
+                    android:id="@+id/button_AC"
+                    android:layout_width="75dp"
+                    android:layout_height="60dp"
+                    android:layout_margin="3dp"
+                    android:layout_weight="1"
+                    android:background="@drawable/button_ac"
+                    android:text="AC" />
             </LinearLayout>
-
-            <Button
-                android:layout_width="65dp"
-                android:layout_height="65dp"
-                android:layout_margin="5dp"
-                android:layout_weight="1"
-                android:background="@drawable/button_operation"
-                android:text="/" />
-
-            <Button
-                android:layout_width="65dp"
-                android:layout_height="65dp"
-                android:layout_margin="5dp"
-                android:layout_weight="1"
-                android:background="@drawable/button_operation"
-                android:text="*" />
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal">
-
-            <Button
-                android:layout_width="65dp"
-                android:layout_height="65dp"
-                android:layout_margin="5dp"
-                android:layout_weight="1"
-                android:background="@drawable/numbers"
-                android:text="7" />
-
-            <Button
-                android:layout_width="65dp"
-                android:layout_height="65dp"
-                android:layout_margin="5dp"
-                android:layout_weight="1"
-                android:background="@drawable/numbers"
-                android:text="8" />
-
-            <Button
-                android:layout_width="65dp"
-                android:layout_height="65dp"
-                android:layout_margin="5dp"
-                android:layout_weight="1"
-                android:background="@drawable/numbers"
-                android:text="9" />
-
-            <Button
-                android:layout_width="65dp"
-                android:layout_height="65dp"
-                android:layout_margin="5dp"
-                android:layout_weight="1"
-                android:background="@drawable/button_operation"
-                android:text="-" />
-
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal">
-
-            <Button
-                android:layout_width="65dp"
-                android:layout_height="65dp"
-                android:layout_margin="5dp"
-                android:layout_weight="1"
-                android:background="@drawable/numbers"
-                android:text="4" />
-
-            <Button
-                android:layout_width="65dp"
-                android:layout_height="65dp"
-                android:layout_margin="5dp"
-                android:layout_weight="1"
-                android:background="@drawable/numbers"
-                android:text="5" />
-
-            <Button
-                android:layout_width="65dp"
-                android:layout_height="65dp"
-                android:layout_margin="5dp"
-                android:layout_weight="1"
-                android:background="@drawable/numbers"
-                android:text="6" />
-
-            <Button
-                android:id="@+id/button10"
-                android:layout_width="65dp"
-                android:layout_height="65dp"
-                android:layout_margin="5dp"
-                android:layout_weight="1"
-                android:background="@drawable/button_operation"
-                android:text="+" />
-
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="horizontal">
 
             <LinearLayout
                 android:layout_width="wrap_content"
-                android:layout_height="match_parent"
+                android:layout_height="65dp"
                 android:layout_weight="1"
-                android:orientation="vertical">
+                android:orientation="horizontal">
+
+                <Button
+                    android:id="@+id/button_4"
+                    android:layout_width="75dp"
+                    android:layout_height="60dp"
+                    android:layout_margin="3dp"
+                    android:layout_weight="1"
+                    android:background="@drawable/numbers"
+                    android:text="4" />
+
+                <Button
+                    android:id="@+id/button_5"
+                    android:layout_width="75dp"
+                    android:layout_height="60dp"
+                    android:layout_margin="3dp"
+                    android:layout_weight="1"
+                    android:background="@drawable/numbers"
+                    android:text="5" />
+
+                <Button
+                    android:id="@+id/button_6"
+                    android:layout_width="75dp"
+                    android:layout_height="60dp"
+                    android:layout_margin="3dp"
+                    android:layout_weight="1"
+                    android:background="@drawable/numbers"
+                    android:text="6" />
+
+                <Button
+                    android:id="@+id/button_oper_division"
+                    android:layout_width="75dp"
+                    android:layout_height="60dp"
+                    android:layout_margin="3dp"
+                    android:layout_weight="1"
+                    android:background="@drawable/button_operation"
+                    android:text="/" />
 
                 <LinearLayout
-                    android:layout_width="180dp"
-                    android:layout_height="77dp"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_weight="1"
                     android:orientation="horizontal">
 
                     <Button
-                        android:id="@+id/button47"
-                        android:layout_width="58dp"
-                        android:layout_height="65dp"
-                        android:layout_marginLeft="5dp"
-                        android:layout_marginTop="5dp"
+                        android:id="@+id/button_paren_gouche"
+                        android:layout_width="35dp"
+                        android:layout_height="60dp"
+                        android:layout_margin="3dp"
                         android:layout_weight="1"
-                        android:background="@drawable/numbers"
-                        android:text="1" />
+                        android:background="@drawable/parentese"
+                        android:text="(" />
 
                     <Button
-                        android:id="@+id/button48"
-                        android:layout_width="58dp"
-                        android:layout_height="65dp"
-                        android:layout_marginLeft="8dp"
-                        android:layout_marginRight="5dp"
-                        android:layout_marginTop="5dp"
+                        android:id="@+id/button_paren_droite"
+                        android:layout_width="35dp"
+                        android:layout_height="60dp"
+                        android:layout_margin="3dp"
                         android:layout_weight="1"
-                        android:background="@drawable/numbers"
-                        android:text="2" />
+                        android:background="@drawable/parentese"
+                        android:text=")" />
                 </LinearLayout>
-
-                <Button
-                    android:id="@+id/button46"
-                    android:layout_width="170dp"
-                    android:layout_height="63dp"
-                    android:layout_marginLeft="5dp"
-                    android:layout_marginTop="3dp"
-                    android:background="@drawable/button_zero"
-                    android:text="0" />
 
             </LinearLayout>
 
             <LinearLayout
-                android:layout_width="75dp"
-                android:layout_height="match_parent"
-                android:layout_weight="1"
-                android:orientation="vertical">
+                android:layout_width="wrap_content"
+                android:layout_height="130dp"
+                android:orientation="horizontal">
+
+                <LinearLayout
+                    android:layout_width="134dp"
+                    android:layout_height="match_parent"
+                    android:layout_weight="1"
+                    android:orientation="vertical">
+
+                    <LinearLayout
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:orientation="horizontal">
+
+                        <Button
+                            android:id="@+id/button_1"
+                            android:layout_width="68dp"
+                            android:layout_height="60dp"
+                            android:layout_margin="3dp"
+                            android:layout_weight="1"
+                            android:background="@drawable/numbers"
+                            android:text="1" />
+
+                        <Button
+                            android:id="@+id/button_2"
+                            android:layout_width="65dp"
+                            android:layout_height="60dp"
+                            android:layout_margin="3dp"
+                            android:layout_weight="1"
+                            android:background="@drawable/numbers"
+                            android:text="2" />
+                    </LinearLayout>
+
+                    <Button
+                        android:id="@+id/button_0"
+                        android:layout_width="match_parent"
+                        android:layout_height="60dp"
+                        android:layout_margin="3dp"
+                        android:layout_marginTop="0dp"
+                        android:background="@drawable/button_zero"
+                        android:text="0" />
+
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="72dp"
+                    android:layout_height="match_parent"
+                    android:layout_weight="1"
+                    android:orientation="vertical">
+
+                    <Button
+                        android:id="@+id/button_3"
+                        android:layout_width="60dp"
+                        android:layout_height="60dp"
+                        android:layout_margin="3dp"
+                        android:background="@drawable/numbers"
+                        android:text="3" />
+
+                    <Button
+                        android:id="@+id/button_point"
+                        android:layout_width="60dp"
+                        android:layout_height="60dp"
+                        android:layout_margin="3dp"
+                        android:background="@drawable/numbers"
+                        android:text="." />
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="67dp"
+                    android:layout_height="match_parent"
+                    android:layout_weight="1"
+                    android:orientation="vertical">
+
+                    <Button
+                        android:id="@+id/button_oper_moin"
+                        android:layout_width="59dp"
+                        android:layout_height="60dp"
+                        android:layout_margin="3dp"
+                        android:background="@drawable/button_operation"
+                        android:text="-" />
+
+                    <Button
+                        android:id="@+id/button_oper_plus"
+                        android:layout_width="60dp"
+                        android:layout_height="60dp"
+                        android:layout_margin="3dp"
+                        android:background="@drawable/button_operation"
+                        android:text="+" />
+                </LinearLayout>
 
                 <Button
-                    android:id="@+id/button44"
-                    android:layout_width="78dp"
-                    android:layout_height="65dp"
-                    android:layout_marginLeft="1dp"
-                    android:layout_marginRight="5dp"
-                    android:layout_marginTop="5dp"
-                    android:background="@drawable/numbers"
-                    android:text="3" />
-
-                <Button
-                    android:id="@+id/button45"
-                    android:layout_width="78dp"
-                    android:layout_height="65dp"
-                    android:layout_marginLeft="1dp"
-                    android:layout_marginTop="10dp"
-                    android:background="@drawable/numbers"
-                    android:text="." />
+                    android:id="@+id/button_egal"
+                    android:layout_width="68dp"
+                    android:layout_height="126dp"
+                    android:layout_margin="3dp"
+                    android:layout_weight="1"
+                    android:background="@drawable/button_egal"
+                    android:text="=" />
             </LinearLayout>
 
-            <Button
-                android:id="@+id/button39"
-                android:layout_width="75dp"
-                android:layout_height="match_parent"
-                android:layout_margin="5dp"
-                android:layout_weight="1"
-                android:background="@drawable/button_egal"
-                android:text="=" />
         </LinearLayout>
+
+        <TextView
+            android:id="@+id/visor_lcd"
+            android:layout_width="345dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:background="@drawable/visor_lcd"
+            android:text="TextView" />
 
     </LinearLayout>
 </android.support.constraint.ConstraintLayout>
