--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -22,7 +22,11 @@
             android:layout_width="match_parent"
             android:layout_height="104dp"
             android:background="@drawable/visor_lcd"
-            android:text="TextView"
+            android:fontFamily="monospace"
+            android:text="0123456789"
+            android:textAlignment="textEnd"
+            android:textSize="24sp"
+            android:typeface="monospace"
             tools:layout_margin="5dp" />
 
         <LinearLayout
@@ -31,11 +35,13 @@
             android:orientation="horizontal">
 
             <Button
+                android:id="@+id/button_AC"
                 android:layout_width="65dp"
                 android:layout_height="65dp"
                 android:layout_margin="5dp"
                 android:layout_weight="1"
                 android:background="@drawable/button_ac"
+                android:fontFamily="monospace"
                 android:text="AC" />
 
             <LinearLayout
@@ -45,6 +51,7 @@
                 android:orientation="horizontal">
 
                 <Button
+                    android:id="@+id/button_paren_gouche"
                     android:layout_width="42dp"
                     android:layout_height="65dp"
                     android:layout_margin="5dp"
@@ -53,6 +60,7 @@
                     android:text="(" />
 
                 <Button
+                    android:id="@+id/button_paren_droite"
                     android:layout_width="42dp"
                     android:layout_height="65dp"
                     android:layout_margin="5dp"
@@ -62,6 +70,7 @@
             </LinearLayout>
 
             <Button
+                android:id="@+id/button_oper_division"
                 android:layout_width="65dp"
                 android:layout_height="65dp"
                 android:layout_margin="5dp"
@@ -70,6 +79,7 @@
                 android:text="/" />
 
             <Button
+                android:id="@+id/button_oper_fois"
                 android:layout_width="65dp"
                 android:layout_height="65dp"
                 android:layout_margin="5dp"
@@ -84,6 +94,7 @@
             android:orientation="horizontal">
 
             <Button
+                android:id="@+id/button_7"
                 android:layout_width="65dp"
                 android:layout_height="65dp"
                 android:layout_margin="5dp"
@@ -92,6 +103,7 @@
                 android:text="7" />
 
             <Button
+                android:id="@+id/button_8"
                 android:layout_width="65dp"
                 android:layout_height="65dp"
                 android:layout_margin="5dp"
@@ -100,6 +112,7 @@
                 android:text="8" />
 
             <Button
+                android:id="@+id/button_9"
                 android:layout_width="65dp"
                 android:layout_height="65dp"
                 android:layout_margin="5dp"
@@ -108,6 +121,7 @@
                 android:text="9" />
 
             <Button
+                android:id="@+id/button_oper_moin"
                 android:layout_width="65dp"
                 android:layout_height="65dp"
                 android:layout_margin="5dp"
@@ -123,6 +137,7 @@
             android:orientation="horizontal">
 
             <Button
+                android:id="@+id/button_4"
                 android:layout_width="65dp"
                 android:layout_height="65dp"
                 android:layout_margin="5dp"
@@ -131,6 +146,7 @@
                 android:text="4" />
 
             <Button
+                android:id="@+id/button_5"
                 android:layout_width="65dp"
                 android:layout_height="65dp"
                 android:layout_margin="5dp"
@@ -139,6 +155,7 @@
                 android:text="5" />
 
             <Button
+                android:id="@+id/button_6"
                 android:layout_width="65dp"
                 android:layout_height="65dp"
                 android:layout_margin="5dp"
@@ -147,7 +164,7 @@
                 android:text="6" />
 
             <Button
-                android:id="@+id/button10"
+                android:id="@+id/button_oper_plus"
                 android:layout_width="65dp"
                 android:layout_height="65dp"
                 android:layout_margin="5dp"
@@ -174,7 +191,7 @@
                     android:orientation="horizontal">
 
                     <Button
-                        android:id="@+id/button47"
+                        android:id="@+id/button_1"
                         android:layout_width="58dp"
                         android:layout_height="65dp"
                         android:layout_marginLeft="5dp"
@@ -184,7 +201,7 @@
                         android:text="1" />
 
                     <Button
-                        android:id="@+id/button48"
+                        android:id="@+id/button_2"
                         android:layout_width="58dp"
                         android:layout_height="65dp"
                         android:layout_marginLeft="8dp"
@@ -196,7 +213,7 @@
                 </LinearLayout>
 
                 <Button
-                    android:id="@+id/button46"
+                    android:id="@+id/button_0"
                     android:layout_width="170dp"
                     android:layout_height="63dp"
                     android:layout_marginLeft="5dp"
@@ -213,7 +230,7 @@
                 android:orientation="vertical">
 
                 <Button
-                    android:id="@+id/button44"
+                    android:id="@+id/button_3"
                     android:layout_width="78dp"
                     android:layout_height="65dp"
                     android:layout_marginLeft="1dp"
@@ -223,7 +240,7 @@
                     android:text="3" />
 
                 <Button
-                    android:id="@+id/button45"
+                    android:id="@+id/button_point"
                     android:layout_width="78dp"
                     android:layout_height="65dp"
                     android:layout_marginLeft="1dp"
@@ -233,7 +250,7 @@
             </LinearLayout>
 
             <Button
-                android:id="@+id/button39"
+                android:id="@+id/button_egal"
                 android:layout_width="75dp"
                 android:layout_height="match_parent"
                 android:layout_margin="5dp"
